# fastapi-tdd-docker

./: README.md  release.sh  requirements.txt
.github/workflows/: main.yml
project/: .dockerignore  .gitignore  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
project/app/: main.py
project/db/: Dockerfile
project/tests/: conftest.py
